# backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  postman_collection.json  pyrightconfig.json  test_vanna.py
.agent/rules/: specify-rules.md
.postman/: config.json
.specify/memory/: constitution.md
agent_viz/: plan.md
api/: .env.example  alembic.ini  pyproject.toml
api/alembic/: alembic.ini  env.py
api/alembic/versions/: .gitkeep  001_initial_schema.py  002_add_updated_at_to_generation_results.py  265773d7ffea_add_project_entity.py  544e4d37b715_rename_results_to_charts.py  91914d4ab1e5_add_result_id_to_conversation_messages.py  a3d9bf95cf61_add_query_vectors_table.py  a3d9bf95cf62_add_error_to_response_type.py  a633aea923e9_add_cached_response_to_query_vectors.py  c23c6059123a_add_schemadocumentation_vector_table.py
api/src/api/: __init__.py  config.py  dependencies.py  main.py
api/src/api/db/: __init__.py  base.py  engine.py
api/src/api/models/: __init__.py  database.py  error_schemas.py  schemas.py
api/src/api/routes/: __init__.py  charts.py  generate.py  health.py  projects.py  results.py  sessions.py
api/src/api/services/: __init__.py  chart_service.py  pipeline_service.py  project_service.py  result_service.py  session_service.py  vector_service.py
api/src/scripts/: run_schema_enhancer.py
api/tests/: conftest.py  smoke_test.py  test_charts.py
bdd/: chinook.sql  init-postgres.sh
decision_agent/: .env.example  AUTONOMOUS_AGENT_PLAN.md  pyproject.toml
decision_agent/examples/: basic_usage.py
decision_agent/src/decision_agent/: __init__.py  agent.py  classifier.py  config.py  exceptions.py  logger.py  models.py  protocols.py  sql_validator.py
decision_agent/src/decision_agent/prompts/: __init__.py  classification_prompt.py  refinement_prompt.py
decision_agent/tests/: __init__.py  conftest.py  test_agent.py
orchestrator/: __init__.py
postman/globals/: workspace.postman_globals.json
scratch/: list_models.py
specs/TFG-13-crear-agente-decisor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/TFG-13-crear-agente-decisor/checklists/: requirements.md
specs/TFG-13-crear-agente-decisor/contracts/: api-v1.md
vanna_agent/: .env.example  pyproject.toml
vanna_agent/examples/: basic_usage.py  requirements.txt
vanna_agent/src/vanna_agent/: __init__.py  agent.py  config.py  models.py
vanna_agent/tests/: __init__.py  conftest.py
viz_agent/: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  README.md  RESUMEN_IMPLEMENTACION.md  output_customer_box.json  output_customer_histogram.json  output_customer_pie.json  output_temporal_line.json  output_temporal_scatter.json  pyproject.toml  refactor_plan.md  sdd-guide.MD  spec.md
viz_agent/examples/: basic_usage.py  customer_analysis.py  load_from_json.py  temporal_analysis.py
viz_agent/src/viz_agent/: __init__.py  agent.py  analyzer.py  config.py  gemini_client.py  logger.py  models.py  validator.py
viz_agent/src/viz_agent/prompts/: __init__.py  correction_prompt.py  decision_prompt.py  modification_prompt.py
viz_agent/src/viz_agent/utils/: __init__.py
viz_agent/tests/: conftest.py  test_agent.py  test_analyzer.py  test_config.py  test_gemini_client.py  test_logger.py  test_models.py  test_validator.py
