[project]
name = "genbi-api"
version = "0.1.0"
description = "API REST de Gen BI — expone el pipeline al frontend con persistencia en PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nahuel Agustin Carro", email = "nahuelagustincarro@gmail.com"}
]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation & models
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    # Env loading
    "python-dotenv>=1.0.0",
    "pandas>=3.0.1",
    "google-genai>=1.69.0",
    "pytest-mock>=3.15.1",
    "structlog>=25.5.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "sqlparse>=0.5.5",
    "vanna>=2.0.2",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.9",
    "mypy>=1.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=api --cov-report=html --cov-report=term"
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pyright]
typeCheckingMode = "basic"
extraPaths = ["src"]
venvPath = ".."
venv = ".venv"
